# rust-docker-grpc-cert-demo

./: Cargo.toml  Dockerfile  build.rs  y.pem
cert/: myca.key  myca.pem  myca.srl  server.csr  server.csr.cnf  server.key  server.pem  v3.ext
protos/: hello.proto
src/: client.rs  server.rs
