[package]
name = "grpc-demo-tonic"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="server"
path="src/server.rs"

[[bin]]
name="client"
path="src/client.rs"

[dependencies]
anyhow = "1.0.43"
tonic = {version="0.5.0",  features=["transport", "tls"]}
prost = "0.8.0"
tokio = { version = "1.6.4", features = ["full"] }

[build-dependencies]
tonic-build = "0.5.2"